--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,10 @@
 }
 
 .form {
-  display: flex;
-  align-items: center;
+display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  margin-top: 2rem;
 }
 
 .form label {
@@ -55,7 +57,28 @@
 
 .clock {
   font-size: 3rem;
+  margin: 0.5rem;
 }
+
+.submit-button {
+    background-color: #419444;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.submit-button:hover {
+  background-color: #54bd57;
+  transition: 0.3 ease-in-out;
+}
+
 
 h1 {
   margin: 0;
@@ -76,6 +99,8 @@ h1 {
   }
 
 }
+
+
 
 @media only screen and (max-height: 500px) {
   .greeting-display {
